
noinst_PROGRAMS = \
	antialias ao_waveform apply_cal cmd dio eeprom_dump info \
	inp inpn insn ledclock mmap outp poll receiver select \
	sender sigio sv tut1 tut2

noinst_HEADERS = examples.h

antialias_SOURCES = antialias.c common.c
antialias_CFLAGS = $(COMEDILIB_CFLAGS)
antialias_LDADD = $(COMEDILIB_LIBS)

ao_waveform_SOURCES = ao_waveform.c common.c
ao_waveform_CFLAGS = $(COMEDILIB_CFLAGS)
ao_waveform_LDADD = $(COMEDILIB_LIBS)

apply_cal_SOURCES = apply_cal.c common.c
apply_cal_CFLAGS = $(COMEDILIB_CFLAGS)
apply_cal_LDADD = $(COMEDILIB_LIBS)

cmd_SOURCES = cmd.c common.c
cmd_CFLAGS = $(COMEDILIB_CFLAGS)
cmd_LDADD = $(COMEDILIB_LIBS)

dio_SOURCES = dio.c common.c
dio_CFLAGS = $(COMEDILIB_CFLAGS)
dio_LDADD = $(COMEDILIB_LIBS)

eeprom_dump_SOURCES = eeprom_dump.c common.c
eeprom_dump_CFLAGS = $(COMEDILIB_CFLAGS)
eeprom_dump_LDADD = $(COMEDILIB_LIBS)

info_SOURCES = info.c common.c
info_CFLAGS = $(COMEDILIB_CFLAGS)
info_LDADD = $(COMEDILIB_LIBS)

inp_SOURCES = inp.c common.c
inp_CFLAGS = $(COMEDILIB_CFLAGS)
inp_LDADD = $(COMEDILIB_LIBS)

inpn_SOURCES = inpn.c common.c
inpn_CFLAGS = $(COMEDILIB_CFLAGS)
inpn_LDADD = $(COMEDILIB_LIBS)

insn_SOURCES = insn.c common.c
insn_CFLAGS = $(COMEDILIB_CFLAGS)
insn_LDADD = $(COMEDILIB_LIBS)

ledclock_SOURCES = ledclock.c common.c
ledclock_CFLAGS = $(COMEDILIB_CFLAGS)
ledclock_LDADD = $(COMEDILIB_LIBS)

mmap_SOURCES = mmap.c common.c
mmap_CFLAGS = $(COMEDILIB_CFLAGS)
mmap_LDADD = $(COMEDILIB_LIBS)

outp_SOURCES = outp.c common.c
outp_CFLAGS = $(COMEDILIB_CFLAGS)
outp_LDADD = $(COMEDILIB_LIBS)

poll_SOURCES = poll.c common.c
poll_CFLAGS = $(COMEDILIB_CFLAGS)
poll_LDADD = $(COMEDILIB_LIBS)

receiver_SOURCES = receiver.c common.c
receiver_CFLAGS = $(COMEDILIB_CFLAGS)
receiver_LDADD = $(COMEDILIB_LIBS)

select_SOURCES = select.c common.c
select_CFLAGS = $(COMEDILIB_CFLAGS)
select_LDADD = $(COMEDILIB_LIBS)

sender_SOURCES = sender.c common.c
sender_CFLAGS = $(COMEDILIB_CFLAGS)
sender_LDADD = $(COMEDILIB_LIBS)

sigio_SOURCES = sigio.c common.c
sigio_CFLAGS = $(COMEDILIB_CFLAGS)
sigio_LDADD = $(COMEDILIB_LIBS)

sv_SOURCES = sv.c common.c
sv_CFLAGS = $(COMEDILIB_CFLAGS)
sv_LDADD = $(COMEDILIB_LIBS)

tut1_SOURCES = tut1.c
tut1_CFLAGS = $(COMEDILIB_CFLAGS)
tut1_LDADD = $(COMEDILIB_LIBS)

tut2_SOURCES = tut2.c
tut2_CFLAGS = $(COMEDILIB_CFLAGS)
tut2_LDADD = $(COMEDILIB_LIBS)


